# whatsapp-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-photo.yml  lint.yml  test.yml
photos_bot/: __init__.py  cli.py  core.py
whatsapp_bot/: __init__.py  __main__.py  core.py
