[project]
name = "whatsapp-bot"
version = "0.2.0"
description = "WhatsApp Daily Photo Bot"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Irad Aharoni" }]
maintainers = [{ name = "Irad Aharoni", email = "irad.aharoni@gmail.com" }]
keywords = ["whatsapp", "bot", "daily", "photo"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "dotenv>=0.9.9",
    "pywa>=2.7.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
whatsapp-bot = "whatsapp_bot.__main__:main"

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "ruff>=0.11.2",
]
